Hackathon code online testing.ipynb

--- a/Hackathon code online testing.ipynb
+++ b/Hackathon code online testing.ipynb
@@ -75,8 +75,8 @@
     "    for i in range(cycles):\n",
     "        print(f\"\\n--- Monitoring Cycle {i+1} ---\")\n",
     "        for product in products:\n",
-    "            product.temperature = random.uniform(10, 40)  # Randomize temperature\n",
-    "            product.humidity = random.uniform(10, 80)  # Randomize humidity\n",
+    "            product.temperature = random.uniform(10, 40),
+    "            product.humidity = random.uniform(10, 80),
     "            product.check_quality()\n",
     "            alert_system(product)\n",
     "        time.sleep(2)\n",
